# LMD

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SQLTest.sln  pyproject.toml
.github/: FUNDING.yml
SQLTest/: Form1.Designer.cs  Form1.cs  Program.cs  SQLTest.csproj
SQLTest/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
benchmarks/: __init__.py  benchmarks.py
docs/: RESEARCH_PAPER_LMD.md
examples/: __init__.py  basic_usage.py  creative_leaps.py  hierarchical_ideas.py  language_grounding.py
lmd/: __init__.py  benchmarks.py  chaos_monitor.py  config.py  coupling.py  creative_ideation.py  creative_leaps.py  curiosity_prober.py  dynamics.py  heartbeat_integration.py  hierarchical_ideas.py  ideation.py  imagination.py  language_grounding.py  living_memory.py  metabolism.py  narrative.py  plausibility.py  prediction.py  safeguards.py  story_encoder.py  toy_system.py
lmd/cuda/: __init__.py  batch_ops.py  fallback.py  kernels.py
tests/: __init__.py  test_basic.py  test_creative_leaps.py  test_lmd_imagination.py  test_lmd_real_story.py  test_lmd_validation.py
