[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "living-memory-dynamics"
version = "1.3.0"
description = "Living Memory Dynamics - A Novel Framework for Narrative-Generating Episodic Memory with Creative Leaps and Language Grounding"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joshua R. Thomas", email = "mordiaky@gmail.com"}
]
keywords = [
    "memory",
    "episodic-memory",
    "narrative",
    "creative-ai",
    "embedding",
    "cognitive-architecture",
    "neural-network",
    "imagination",
    "creativity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
cuda = [
    "triton>=2.0.0",  # For custom CUDA kernels
]
language = [
    "sentence-transformers>=2.2.0",  # For text encoding/decoding
]
llm = [
    "ollama>=0.1.0",  # For local LLM descriptions
    "openai>=1.0.0",  # For OpenAI API descriptions
]
all = [
    "living-memory-dynamics[dev,cuda,language,llm]",
]

[project.urls]
Homepage = "https://github.com/mordiaky/living-memory-dynamics"
Documentation = "https://github.com/mordiaky/living-memory-dynamics#readme"
Repository = "https://github.com/mordiaky/living-memory-dynamics"
Issues = "https://github.com/mordiaky/living-memory-dynamics/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["lmd*"]

[tool.setuptools.package-data]
lmd = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]  # Line too long - handled by black

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
